--- a/lab7/Report/report.tex
+++ b/lab7/Report/report.tex
@@ -85,25 +85,28 @@ ans =
 The covariance matrices are the identity matrices, indicating that there is no dependence between the signal vectors, since information about one signal does not give any information about the value of the other and vice versa (the corresponding covariance is 0).
 
 \section{}
-Our implementation of the fastICA is given in seection \ref{Ass2} in the appendix.
+Our implementation of the fastICA is given in section \ref{Ass2} in the appendix.
 
 \subsection{}
 
 \subsection{}
-
+The code given in section \ref{Ass2} in the appendix yields the plots given in figure \ref{fig2.1}.
 \begin{figure}
   \centering
-  \caption{The separate signals and the estimated independent component.}
+  \caption{The separate signals and the estimated independent component ($threshold = 0.0001, n = 1$.}
     \includegraphics[width=\columnwidth]{Ass2.eps}
   \label{fig2.1}
 \end{figure}
+The plot shows that the estimated independent component is a combination of the four separate signals that incorporates most of the variance of the four signals. As we can see it looks most like signal 4, suggesting that signal 4 has the most influence on the total and shows the most variance out of the four signals.
+
+\section{}
 
 \newpage
 \section*{Appendix}
 \appendix
 \section{Assignment 1}
 \lstinputlisting{../Code/Ass1.m}{\label{Ass1}}
-\section{Assignment 1}
+\section{Assignment 2 and 3}
 \lstinputlisting{../Code/Ass1.m}{\label{Ass2}}
 
 \end{document}
