--- a/lab7/Report/report.tex
+++ b/lab7/Report/report.tex
@@ -97,7 +97,7 @@ The code given in section \ref{Ass2} in the appendix yields the plots given in f
     \includegraphics[width=\columnwidth]{Ass2.eps}
   \label{fig2.1}
 \end{figure}
-The plot shows that the estimated independent component is a combination of the four separate signals that incorporates most of the variance of the four signals. As we can see it looks most like signal 4, suggesting that signal 4 has the most influence on the total and shows the most variance out of the four signals.
+The plot shows that the estimated independent component is a combination of the four mixed signals that incorporates most of the variance of the four signals. As we can see it looks most like signal 4, suggesting that signal 4 resembles the most influental signal the most and shows the most variance out of the mixed signals.
 
 \section{}
 
