--- a/lab7/Report/report.tex
+++ b/lab7/Report/report.tex
@@ -100,6 +100,7 @@ The code given in section \ref{Ass2} in the appendix yields the plots given in f
 The plot shows that the estimated independent component is a combination of the four mixed signals that incorporates most of the variance of the four signals. As we can see it looks most like signal 4, suggesting that signal 4 resembles the most influental signal the most and shows the most variance out of the mixed signals.
 
 \section{}
+As said, we used the same code for Assignment 2 and Assignment 3, with a different value for the number of components.
 
 \newpage
 \section*{Appendix}
