--- a/lab7/Report/report.tex
+++ b/lab7/Report/report.tex
@@ -36,9 +36,29 @@ showstringspaces=false
 
 \section{}
 \subsection{}
-The code in section \ref{Ass1} of the appendix was used to acquire the plots given in \ref{fig1.1}. As we can see, the sphering changes the signals in such a way that there is no dependency between them anymore.
+The code in section \ref{Ass1} of the appendix was used to acquire the plots given in figure \ref{fig1.1}. As we can see, the sphering changes the signals in such a way that there is no dependency between them anymore.
 
-\begin{figure}
+\subsection{}
+The plots show that there is a clear correlation in unsphered signals (they seem to have a linear correlation: for every increase of x, there is an increase in y and vice versa), while the sphered signals do not have such relationships. In the plots of the sphered signals an increase in x does not necessarily lead to an increase or decrease in y (both are possible in either plot).
+This is confirmed by the covariance matrices of the sphered signals:
+\begin{lstlisting}
+>> cov(spheredS(1,:), spheredS(2,:))
+
+ans =
+
+    1.0000    0.0000
+    0.0000    1.0000
+
+>> cov(spheredS(3,:), spheredS(4,:))
+
+ans =
+
+    1.0000    0.0000
+    0.0000    1.0000
+\end{lstlisting}
+The covariance matrices are the same as the identity matrices, indicating that there is no dependence between the signal vectors: information about one signal does not give any information about the value of the other and vice versa (the corresponding covariance is 0).
+
+\begin{figure}[H]
   \centering
   \caption{The mixed signals before and after whitening.}
 	\begin{subfigure}[b]{.49\textwidth}
@@ -64,40 +84,21 @@ The code in section \ref{Ass1} of the appendix was used to acquire the plots giv
   \label{fig1.1}
 \end{figure}
 
-\subsection{}
-The plots show that there is a clear correlation in unsphered signals (they seem to have a linear correlation, for every increase of x, there is an increase in y and vice versa), while the sphered signals do not have such relationships. In the plots of the sphered signals an increase in x does not necessarily lead to an increase or decrease in y (both are possible in either plot).
-This is confirmed by the covariance matrices of the sphered signals:
-\begin{lstlisting}
->> cov(spheredS(1,:), spheredS(2,:))
-
-ans =
-
-    1.0000    0.0000
-    0.0000    1.0000
-
->> cov(spheredS(3,:), spheredS(4,:))
-
-ans =
-
-    1.0000    0.0000
-    0.0000    1.0000
-\end{lstlisting}
-The covariance matrices are the identity matrices, indicating that there is no dependence between the signal vectors, since information about one signal does not give any information about the value of the other and vice versa (the corresponding covariance is 0).
-
 \section{}
-Our implementation of the fastICA is given in section \ref{Ass2} in the appendix.
+Our implementation of the fastICA algorithm with the expansion of assignment 3 is given in section \ref{Ass2} in the appendix (for $n=1$ the code runs for only the first estimated independent component, as is requested in assignment 2).
 
 \subsection{}
 
+
 \subsection{}
-The code given in section \ref{Ass2} in the appendix yields the plots given in figure \ref{fig2.1}.
+The code given in section \ref{Ass2} in the appendix yields the plots given in figure \ref{fig2.1} for $n = 1$.
 \begin{figure}
   \centering
-  \caption{The separate signals and the estimated independent component ($threshold = 0.0001, n = 1$.}
+  \caption{The separate signals and the estimated independent component ($threshold = 0.0001, n = 1$).}
     \includegraphics[width=\columnwidth]{Ass2.eps}
   \label{fig2.1}
 \end{figure}
-The plot shows that the estimated independent component is a combination of the four mixed signals that incorporates most of the variance of the four signals. As we can see it looks most like signal 4, suggesting that signal 4 resembles the most influental signal the most and shows the most variance out of the mixed signals.
+The plot shows that the estimated independent component is a combination of the four mixed signals that incorporates most of their variance. As we can see it looks most like signal 1 and 4, suggesting that signal 1 and 4 resemble the most influental signal within the mixed signals the most, which is caused by the fact that signal 1 and 4 show the most variance out of the four signals.
 
 \section{}
 
